# vane

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  allfiles.txt  cargo.toml  compile-generate.sh  rococo-raw.json  rococo.json  template-raw.json  template.json  test.json  tree.toml  vane-raw.json  vane-state  vane-wasm  vane.json
.github/workflows/: build.yml
artifacts/: Screen Recording 2023-10-15 at 6.32.05 PM.mov.REMOVED.git-id
chain-files/: vane-para-raw.json  vane-para-state  vane-para-wasm  vane-para.json  vane-tanssi-raw.json  vane-tanssi.json
chain_files/: vane-tanssi-raw.json  vane-tanssi.json
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/vane-asset-xcm/: Cargo.toml
pallets/vane-order/: Cargo.toml
pallets/vane-order/src/: helper.rs  lib.rs
pallets/vane-payment/: Cargo.toml
pallets/vane-payment/src/: helper.rs  lib.rs
pallets/vane-register/: Cargo.toml
pallets/vane-register/src/: helper.rs  lib.rs
pallets/vane-regsiter/: Cargo.toml
pallets/vane-wallet-less/: Cargo.toml
pallets/vane-wallet-less/src/: lib.rs  ocw.rs
pallets/vane-xcm/: Cargo.toml
pallets/vane-xcm-transfer-system/: Cargo.toml
pallets/vane-xcm-transfer-system/src/: helper.rs  lib.rs
pallets/vane-xcm/src/: helper.rs  lib.rs
polkadot-launch/: vaneconfig.json
primitive/vane-primitive/: Cargo.toml
primitive/vane-primitive/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  xcm_config.rs
runtime/src/weights/: mod.rs  vane_asset_weights.rs
runtime/src/xcm_eml_testing/: mod.rs
runtime/src/xcm_sim_testing/: mod.rs  parachain.rs  relay_chain.rs
runtime/vane-container-runtime/: Cargo.toml  build.rs
runtime/vane-container-runtime/src/: lib.rs  xcm_config.rs
runtime/vane-container-runtime/src/xcm_sim_testing/: mod.rs  parachain.rs
runtime/vane-local-runtime/: Cargo.toml
runtime/vane-parachain-runtime/: Cargo.toml
runtime/vane-parachain-runtime/src/: lib.rs  xcm_config.rs
runtime/vane-parachain-runtime/src/weights/: mod.rs
runtime/vane-parachain-runtime/src/xcm_eml_testing/: mod.rs
runtime/vane-parachain-runtime/src/xcm_sim_testing/: asset_hub.rs  mod.rs  parachain.rs  relay_chain.rs
runtime/xcm-testing/: parachain.rs  relay-chain.rs
script/: compile-generate.sh
scripts/: compile-generate.sh
test/: .gitignore  README.md  moonwall.config.json  package.json  pnpm-lock.yaml  tsconfig.json
test/suits/: test-xcm-functionalities.ts
tmp/: vane-2000-state  vane-2000-wasm  vane.json
tmp1/: vane-state  vane-wasm  vane.json
tmp1/vane-zombie/: alice.yaml  bob.yaml  namespace  polkadot-plain.json  polkadot.json  zombie.json
tmp1/vane-zombie/bob/cfg/: zombie-wrapper.sh
vane-zombie/: namespace  temp-collator.yaml
vane-zombie/cfg/: rococo-local-plain.json
zombienet/: rococo-new.json  rococo-old.json  rococo.json  vane-para.json  vane-para.toml  vane-tanssi.toml  vane.json  vane.toml
zombienet-config/: vane.toml
