[package]
authors = ["Mrisho Lukamba & Evolution"]
build = "build.rs"
description = ""
edition = "2021"
homepage = ""
license = "Unlicense"
name = "vane-node"
repository = ""
version = "1.1.0"

[dependencies]
clap = {version = "4.2.3", features = ["derive"]}
codec = {package = "parity-scale-codec", version = "3.0.0"}
jsonrpsee = {version = "0.16.2", features = ["server"]}
log = "0.4.17"
array-bytes = "6.1.0"
hex = "0.4.3"
serde = {version = "1.0.160", features = ["derive"]}
color-print = "0.3.4"
futures ="*"
# Local
vane-tanssi-runtime = {path = "../runtime/vane-container-runtime"}

#Tanssi
nimbus-consensus = { git = "https://github.com/moondance-labs/moonkit", branch = "tanssi-polkadot-v1.1.0" }


# Substrate
frame-benchmarking = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
frame-benchmarking-cli = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
pallet-transaction-payment-rpc = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sc-basic-authorship = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sc-chain-spec = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sc-cli = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sc-client-api = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sc-consensus = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sc-offchain = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sc-executor = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sc-network = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sc-network-sync = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sc-rpc = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sc-service = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sc-sysinfo = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sc-telemetry = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sc-tracing = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sc-transaction-pool = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sc-transaction-pool-api = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sp-api = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sp-block-builder = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sp-blockchain = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sp-consensus-aura = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sp-core = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sp-io = {git = "https://github.com/moondance-labs/polkadot-sdk", optional = true, branch = "tanssi-polkadot-v1.1.0" }
sp-keystore = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sp-offchain = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sp-runtime = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sp-session = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sp-timestamp = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
sp-transaction-pool = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
substrate-frame-rpc-system = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
substrate-prometheus-endpoint = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
try-runtime-cli = {git = "https://github.com/moondance-labs/polkadot-sdk", optional = true, branch = "tanssi-polkadot-v1.1.0" }

# Polkadot
polkadot-cli = {git = "https://github.com/moondance-labs/polkadot-sdk", features = ["rococo-native"], branch = "tanssi-polkadot-v1.1.0" }
polkadot-primitives = { git = "https://github.com/moondance-labs/polkadot-sdk", default-features = false, branch = "tanssi-polkadot-v1.1.0" }
polkadot-service = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
staging-xcm = {git = "https://github.com/moondance-labs/polkadot-sdk", default-features = false, branch = "tanssi-polkadot-v1.1.0" }

# Cumulus
cumulus-client-cli = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
cumulus-client-consensus-aura = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
cumulus-client-consensus-common = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
cumulus-client-service = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
cumulus-primitives-core = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
cumulus-primitives-parachain-inherent = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
cumulus-relay-chain-inprocess-interface = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
cumulus-relay-chain-interface = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
cumulus-relay-chain-minimal-node = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }
cumulus-relay-chain-rpc-interface = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }

[build-dependencies]
substrate-build-script-utils = {git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.1.0" }

[features]
default = []
runtime-benchmarks = [
  "try-runtime-cli/try-runtime",
  "vane-tanssi-runtime/runtime-benchmarks",
  "polkadot-cli/runtime-benchmarks",
]
try-runtime = [
  "try-runtime-cli/try-runtime",
  "vane-tanssi-runtime/try-runtime",
  "dep:sp-io",
]
