[package]
authors = ["Mrisho Lukamba & Evolution"]
build = "build.rs"
description = ""
edition = "2021"
homepage = ""
license = "Unlicense"
name = "vane-node"
repository = ""
version = "1.1.0"

[dependencies]
clap = {version = "4.2.3", features = ["derive"]}
codec = {package = "parity-scale-codec", version = "3.0.0"}
jsonrpsee = {version = "0.16.2", features = ["server"]}
log = "0.4.17"
array-bytes = "6.1.0"
hex = "0.4.3"
serde = {version = "1.0.160", features = ["derive"]}
color-print = "0.3.4"
futures ="*"
# Local
vane-tanssi-runtime = {path = "../runtime/vane-container-runtime"}

#Tanssi
nimbus-consensus 										= { workspace = true }


# Substrate
frame-benchmarking				 						= { workspace = true }
frame-benchmarking-cli 									= { workspace = true }
pallet-transaction-payment-rpc 							= { workspace = true }
sc-basic-authorship 									= { workspace = true }
sc-chain-spec 											= { workspace = true }
sc-cli 													= { workspace = true }
sc-client-api 											= { workspace = true }
sc-consensus 											= { workspace = true }
sc-offchain 											= { workspace = true }
sc-executor 											= { workspace = true }
sc-network 												= { workspace = true }
sc-network-sync 										= { workspace = true }
sc-rpc 													= { workspace = true }
sc-service 												= { workspace = true }
sc-sysinfo 												= { workspace = true }
sc-telemetry 											= { workspace = true }
sc-tracing 												= { workspace = true }
sc-transaction-pool	 									= { workspace = true }
sc-transaction-pool-api 								= { workspace = true }
sp-api = { workspace 									= true, features = ["std"] }
sp-block-builder 										= { workspace = true, features = ["std"] }
sp-blockchain 											= { workspace = true }
sp-consensus-aura 										= { workspace = true }
sp-core 												= { workspace = true, features = ["std"] }
sp-io 													= { workspace = true, optional = true, features = ["std"] }
sp-keystore 											= { workspace = true, features = ["std"] }
sp-offchain 											= { workspace = true, features = ["std"] }
sp-runtime 												= { workspace = true, features = ["std"] }
sp-session 												= { workspace = true, features = ["std"] }
sp-timestamp 											= { workspace = true, features = ["std"] }
sp-transaction-pool 									= { workspace = true }
substrate-frame-rpc-system 								= { workspace = true }
substrate-prometheus-endpoint 							= { workspace = true }
try-runtime-cli 										= { workspace = true, optional = true }

# Polkadot
polkadot-cli 											= { workspace = true }
polkadot-primitives 									= { workspace =  true }
polkadot-service 										= { workspace = true }
staging-xcm 											= { workspace = true, features = ["std"] }

# Cumulus
cumulus-client-cli 										= { workspace = true }
cumulus-client-consensus-aura 							= { workspace = true }
cumulus-client-consensus-common 						= { workspace = true }
cumulus-client-service 									= { workspace = true }
cumulus-primitives-core 								= { workspace = true }
cumulus-primitives-parachain-inherent 					= { workspace = true }
cumulus-relay-chain-inprocess-interface 				= { workspace = true }
cumulus-relay-chain-interface 							= { workspace = true }
cumulus-relay-chain-minimal-node 						= { workspace = true }
cumulus-relay-chain-rpc-interface 						= { workspace = true }

[build-dependencies]
substrate-build-script-utils 							= { workspace = true }

[features]
default = []
runtime-benchmarks = [
  "try-runtime-cli/try-runtime",
  "vane-tanssi-runtime/runtime-benchmarks",
  "polkadot-cli/runtime-benchmarks",
]
try-runtime = [
  "try-runtime-cli/try-runtime",
  "vane-tanssi-runtime/try-runtime",
  "dep:sp-io",
]
